--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </h2>
             <div class="card p-8 mb-8">
                 <p class="mb-4 text-gray-300 leading-relaxed">
-                    FIANZSROW PERFORMANCE menyediakan jasa optimasi Windows, setting performa PC/Laptop, serta pengaturan grafik game Free Fire Menjadi Lebih Burik. Semua optimasi dilakukan berdasarkan kondisi dan spesifikasi masing-masing perangkat untuk memastikan hasil yang maksimal dan stabil.
+                    Fianzsrow menyediakan jasa optimasi Windows, setting performa PC/Laptop, serta pengaturan grafik game Free Fire Menjadi Lebih Burik. Semua optimasi dilakukan berdasarkan kondisi dan spesifikasi masing-masing perangkat untuk memastikan hasil yang maksimal dan stabil.
                 </p>
                 <p class="mb-4 text-gray-300 leading-relaxed">
                     Proses optimasi difokuskan pada peningkatan stabilitas FPS, pengurangan stutter, serta memaksimalkan kinerja CPU, GPU, dan RAM agar sistem lebih efisien saat gaming maupun penggunaan harian
@@ -188,6 +188,37 @@
             <h2 class="text-4xl font-bold text-neon-green section-header text-center mb-12">
                 <i class="fas fa-cogs mr-3"></i> PAKET OPTIMASI & HARGA
             </h2>
+            <div class="card mt-12 text-center">
+    <h3 class="text-3xl font-bold text-neon-green mb-4">
+        Sudah Dipercaya Banyak User
+    </h3>
+    <p class="text-5xl font-bold text-yellow-400 mb-4">
+        100+ PC Sudah Di Optimize
+    </p>
+    <p class="text-gray-400">
+        Dari spek low sampai high
+    </p>
+</div>
+<div class="card mt-12">
+    <h3 class="text-3xl font-bold text-neon-green mb-6 text-center">
+        Cara Kerja Optimize
+    </h3>
+
+    <div class="grid md:grid-cols-3 gap-6 text-center text-gray-300">
+        <div>
+            <p class="text-4xl font-bold text-yellow-400">1</p>
+            <p>Hubungi Admin</p>
+        </div>
+        <div>
+            <p class="text-4xl font-bold text-yellow-400">2</p>
+            <p>Kirim Spek PC/Laptop</p>
+        </div>
+        <div>
+            <p class="text-4xl font-bold text-yellow-400">3</p>
+            <p>Optimize & Testing FPS</p>
+        </div>
+    </div>
+</div>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Paket Elite Full Optimize -->
 <div class="card text-center transform hover:scale-105 transition-transform duration-300 border-neon-green bg-gradient-to-b from-gray-900 to-gray-800">
@@ -208,7 +239,7 @@
         <li>Direct Remote Support oleh FIANZSROW</li>
     </ul>
 
-    <div class="text-4xl font-bold text-yellow-400 mb-4">Rp 60.000</div>
+    <div class="text-4xl font-bold text-yellow-400 mb-4">Rp 50.000</div>
 
     <a href="https://wa.me/6281330072715" target="_blank"
         class="btn-neon px-6 py-2 rounded-full font-bold shadow-lg hover:scale-105 transition-transform duration-300">
@@ -217,6 +248,11 @@
 </div>
                 <!-- Optimize Premium (Video) -->
 <div class="card text-center transform hover:scale-105 transition-transform duration-300">
+
+    <p class="bg-yellow-500 text-black text-sm font-bold px-3 py-1 rounded-full inline-block mb-3">
+        ⭐ REKOMENDASI
+    </p>
+
     <i class="fas fa-star text-5xl text-neon-green mb-4"></i>
     <h3 class="text-2xl font-bold text-gray-100 mb-3">Optimize Premium (Video)</h3>
     <p class="text-gray-400 mb-4">
@@ -266,6 +302,11 @@
 </div>
                 <!-- Grafik MC (Low) - Remote -->
 <div class="card text-center transform hover:scale-105 transition-transform duration-300">
+
+    <p class="bg-red-500 text-white text-sm font-bold px-3 py-1 rounded-full inline-block mb-3 animate-pulse">
+        🔥 BEST SELLER
+    </p>
+
     <i class="fas fa-desktop text-5xl text-neon-green mb-4"></i>
     <h3 class="text-2xl font-bold text-gray-100 mb-3">Grafik MC (Low) - Remote</h3>
     <p class="text-gray-400 mb-4">
@@ -317,6 +358,99 @@
                     Apa bedanya paket **Rp 30.000** dengan **Rp 25.000**? Jelas beda, ada harga ada kualitas. Paket **Rp 30.000 (Full Optimize)** lebih lengkap dan menyeluruh daripada paket **Rp 25.000 (Via Video)**, menawarkan tingkat optimasi dan jaminan peningkatan performa yang lebih maksimal.
                 </p>
             </div>
+            <!-- Kenapa Harus Fianzsrow -->
+<div class="card mt-12 p-8 text-center border-neon-green">
+    <h3 class="text-3xl font-bold text-neon-green mb-6">
+        Kenapa Harus Fianzsrow?
+    </h3>
+
+    <div class="grid md:grid-cols-2 gap-6 text-gray-300 text-left">
+        <ul class="space-y-2">
+            <li>✔ Sudah digunakan banyak user</li>
+            <li>✔ Setting tested di spek low sampai high</li>
+            <li>✔ Tidak merusak sistem Windows</li>
+        </ul>
+        <ul class="space-y-2">
+            <li>✔ Bisa request sesuai spek masing-masing</li>
+            <li>✔ Dibantu sampai selesai</li>
+            <li>✔ Support after optimize</li>
+        </ul>
+    </div>
+</div>
+<!-- Testimoni Section -->
+<div class="card mt-12 p-8 text-center border-green-500">
+    <h3 class="text-3xl font-bold text-neon-green mb-6">
+        Testimoni Real Customer
+    </h3>
+
+    <p class="text-gray-300 mb-4">
+        Mau lihat bukti hasil optimize & feedback asli dari customer?
+        Semua testimoni tersedia di Saluran WhatsApp resmi kami.
+    </p>
+
+    <!-- ⚠ Slot optimize terbatas setiap hari.
+Cek testimoni sebelum kehabisan. -->
+    <p class="text-red-400 font-bold mb-6 animate-pulse">
+        ⚠ Slot optimize terbatas setiap hari.
+Cek testimoni sebelum kehabisan.
+    </p>
+
+    <a href="https://whatsapp.com/channel/0029Vb7kIef84OmI1XagjB41" target="_blank"
+        class="btn-neon px-8 py-3 rounded-full font-bold shadow-lg hover:scale-105 transition-transform duration-300">
+        Lihat Testimoni di Saluran WA
+    </a>
+
+    <p class="text-sm text-gray-500 mt-4">
+        Semua testimoni adalah hasil real dari user.
+    </p>
+</div>
+<!-- FAQ Section -->
+<div class="card mt-12">
+    <div class="card mt-12 text-center border-green-500">
+    <h3 class="text-2xl font-bold text-green-400 mb-4">
+        Garansi Aman & Transparan
+    </h3>
+
+    <p class="text-gray-300 mb-4">
+        Semua setting aman dan tidak merusak sistem. Bisa dikembalikan ke default kapan saja jika diperlukan.
+    </p>
+
+    <p class="text-gray-300">
+        Untuk paket Grafik MC (Low) dan Grafik via Video, jika setting tidak dapat diterapkan di perangkat kamu,
+        maka dana akan dikembalikan sebesar <span class="font-bold text-yellow-400">66,67%</span>.
+        <br><br>
+        Contoh: Jika pembelian Rp 20.000 dan tidak bisa dipasang,
+        maka refund sebesar Rp 15.000(Untuk biaya admin).
+    </p>
+</div>
+    <h3 class="text-3xl font-bold text-neon-green mb-6 text-center">
+        Pertanyaan Umum (FAQ)
+    </h3>
+
+    <div class="space-y-6 text-gray-300">
+
+        <p>
+            <strong>Apakah aman?</strong><br>
+            Aman dan semua setting bisa dikembalikan ke default kapan saja.
+        </p>
+
+        <p>
+            <strong>Apakah pasti FPS naik?</strong><br>
+            Tergantung spek & kondisi perangkat. Fokus utama adalah stabilitas dan efisiensi sistem.
+        </p>
+
+        <p>
+            <strong>Berapa lama prosesnya?</strong><br>
+            Itu Tergantung Lu bre soalnya untuk set pc semua nya via video kecuali grafik mc ada paket yang gua remotin,jadi menyesuaikan paket lah ya.
+        </p>
+
+        <p>
+            <strong>Untuk Setting Grafik MC aman kah?</strong><br>
+            Aman, selama mengikuti arahan admin dengan benar sesuai panduan yang diberikan.
+        </p>
+
+    </div>
+</div>
             <!-- Call to Action for Purchase -->
             <div class="card mt-12 p-8 text-center bg-purple-900 bg-opacity-20 border-l-4 border-purple-500">
                 <h3 class="text-3xl font-bold text-purple-400 mb-6"><i class="fas fa-headset mr-2"></i> Siap Optimasi PC Kamu?</h3>
